--- a/server-node/package.json
+++ b/server-node/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@koa/router": "^13.1.0",
+    "http-proxy-middleware": "^3.0.3",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-compress": "^5.1.1",
+    "koa-connect": "^2.1.0",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
     "koa-websocket": "^7.0.0",
+    "koa2-proxy-middleware": "^0.0.4",
     "sharp": "^0.33.5",
     "ua-parser-js": "2.0.0-rc.3"
   }
