添加图标，优化ocr

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "云剪贴板",
-    "description": "在局域网内互传纯文本和文件的云剪贴板，即开即用的网页版，无须安装 APP",
-    "short_name": "云剪贴板",
+    "name": "YoungManの工具箱",
+    "description": "YoungManの工具箱",
+    "short_name": "YoungManの工具箱",
     "start_url": "./",
     "scope": ".",
     "display": "standalone",
