--- a/server-node/package.json
+++ b/server-node/package.json
@@ -19,6 +19,7 @@
     "koa-static": "^5.0.0",
     "koa-websocket": "^7.0.0",
     "sharp": "^0.33.5",
-    "ua-parser-js": "2.0.0-rc.3"
+    "ua-parser-js": "2.0.0-rc.3",
+    "axios": "^1.7.7"
   }
 }
