--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build --modern && node after-build.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build --modern && node after-build.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
