--- a/server-node/package.json
+++ b/server-node/package.json
@@ -16,6 +16,7 @@
     "koa-body": "^6.0.1",
     "koa-compress": "^5.1.1",
     "koa-mount": "^4.0.0",
+    "koa-proxies": "^0.12.4",
     "koa-static": "^5.0.0",
     "koa-websocket": "^7.0.0",
     "sharp": "^0.33.5",
